[package]
name = "hex-string-converter"
version = "0.1.0"
authors = ["lvqinghao <lvqinghao@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex-literal = "0.2.1"
hex = { version = "0.4", default-features = false }
hex_fmt = "0.3.0"
rlp = "0.4"
log = "0.4"
env_logger = "0.7"
primitive-types = { version = "0.7.0", default-features = false, features = ["codec"] }
